--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,7 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "react": "^16.13.1",
-    "react-bootstrap": "^1.0.0-beta.17"
+    "react-bootstrap": "^1.0.0-beta.17",
     "react-datepicker": "^2.14.0",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
