--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
@@ -15,11 +15,7 @@
     "express": "^4.17.1",
     "mongoose": "^5.9.5"
   },
-  "scripts":{
-	"start": "node server.js",
-	"heroku-postbuild": "cd client && npm install --only=dev && npm install && npm run build"
-  },
   "engines": {
-	"node": "12.16.1"
+    "node": "12.16.1"
   }
 }
