--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -4,7 +4,7 @@ FROM node:latest
  
 # A directory within the virtualized Docker environment
 # Becomes more relevant when using Docker Compose later
-WORKDIR /usr/src/app
+WORKDIR /usr/src/client
  
 # Copies package.json and package-lock.json to Docker environment
 COPY package*.json ./
@@ -16,7 +16,7 @@ RUN npm install
 COPY . .
  
 # Uses port which is used by the actual application
-EXPOSE 4000
+EXPOSE 3000
  
 # Finally runs the application
 CMD [ "npm", "start" ]
