--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -1,15 +1,15 @@
 version: "2"
 services:
-  app:
-    container_name: app
+  server:
+    container_name: exertracker_server
     restart: always
     build: .
     ports:
-      - "3000:3000"
+      - "8000:8000"
     links:
       - mongo
   mongo:
-    container_name: mongo
+    container_name: exertracker_mongo
     image: mongo
     ports:
       - "27017:27017"
