--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,6 +1,6 @@
 # Docker Image which is used as foundation to create
 # a custom Docker Image with this Dockerfile
-FROM node:latest
+FROM node:latest as build
  
 # A directory within the virtualized Docker environment
 # Becomes more relevant when using Docker Compose later
@@ -15,8 +15,19 @@ RUN npm install
 # Copies everything over to Docker environment
 COPY . .
  
-# Uses port which is used by the actual application
-EXPOSE 3000
- 
-# Finally runs the application
-CMD [ "npm", "start" ]
+# Production build 
+RUN npm run build
+
+# => Run container
+FROM nginx:latest
+
+COPY --from=build /usr/src/client/build /usr/share/nginx/html
+
+RUN rm /etc/nginx/conf.d/default.conf
+
+COPY nginx/nginx.conf /etc/nginx/conf.d
+
+EXPOSE 80
+
+# Start Nginx server
+CMD ["/bin/bash", "-c", "nginx -g \"daemon off;\""]
